# cg-labs

./: CMakeLists.txt  README.md  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp
